--- a/package.json
+++ b/package.json
@@ -15,11 +15,18 @@
     "@types/react-dom": "18.0.10",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
+    "flowbite": "^1.5.5",
+    "flowbite-react": "^0.3.7",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.41.2",
     "typescript": "4.9.4",
     "unofficial-valorant-api": "^2.3.0-stable.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.20",
+    "tailwindcss": "^3.2.4"
   }
 }
